tests/errors/invalid-interface-output.expect
---CODE---
1
---STDERR---
error: delay must be longer than the length of the signal
  ┌─ tests/errors/invalid-interface-output.fil:6:5
  │
2 │   comp Main<G: 1, L: 1>(
  │             - interface allows event to trigger every 1 cycle(s)
  ·
6 │     @[G+2, G+4] out: 1,
  │     ^^^^^^^^^^^ signal lasts for 2 cycle(s)

Compilation failed with 1 errors.
Run with --show-models to generate assignments for failing constraints.
